# verilator-test

./: .gitignore  CMakeLists.txt  Makefile  blinky.v  led_walker.v  sim_main.cpp  test.vcd  uart_tx.sby
formal/: led_walker.sby
formal/test/: config.sby  logfile.txt  status.sqlite  test.xml
formal/test/model/: design.json  design.ys  design_prep.il  design_prep.ys  design_smt2.ys
formal/uart_tx/: logfile.txt  status.sqlite  uart_tx.xml
formal/uart_tx/model/: design.il  design.ys  design_prep.ys  design_smt2.ys
led_walker/: config.sby  led_walker.xml  logfile.txt  status.sqlite
led_walker/model/: design.il  design.json  design.ys  design_prep.il  design_prep.ys  design_smt2.smt2  design_smt2.ys
led_walker/src/: led_walker.v
rtl/: alu.v  block_ram.v  counter.v  cpu_control_unit.v  cpu_datapath.v  program_counter.v  register.v  uart_tx.v
sim/: main.cpp  misc.h
uart_tx/: config.sby  logfile.txt  status.sqlite  uart_tx.xml
uart_tx/engine_0/: logfile_basecase.txt  logfile_induction.txt
uart_tx/model/: design.il  design.json  design.ys  design_prep.il  design_prep.ys  design_smt2.smt2  design_smt2.ys
uart_tx/src/: uart_tx.v  uart_tx_comb.v
